# botw-gettext

./: .gitignore  Cargo.toml
CNzh/ActorType/: ArmorHead.po  CookResult.po  Enemy.po  GelEnemy.po  GiantEnemy.po  HorseObject.po  Item.po  LastBoss.po  MapDynamicPassive.po  NPC.po  PlayerItem.po  Sandworm.po  SiteBoss.po  WeaponBow.po  WeaponShield.po
CNzh/DemoMsg/: Demo003_0.po  Demo004_0.po  Demo007_1.po  Demo007_2.po  Demo018_0.po  Demo019_0.po  Demo022_0.po  Demo034_0.po  Demo035_0.po  Demo044_0.po  Demo051_0.po  Demo101_0.po  Demo104_0.po  Demo105_1.po  Demo109_1.po  Demo109_2.po  Demo116_0.po  Demo117_0.po  Demo120_0.po  Demo123_0.po  Demo129_0.po  Demo132_0.po  Demo133_0.po  Demo135_0.po  Demo137_0.po  Demo139_0.po  Demo143_0.po  Demo143_1.po  Demo143_3.po  Demo146_1.po  Demo148_0.po  Demo152_0.po  Demo159_0.po  Demo160_0.po  Demo161_0.po  Demo169_0.po  Demo175_0.po  Demo176_0.po  Demo177_0.po  Demo200_0.po  (+34 more)
CNzh/EventFlowMsg/: 100enemy.po  Animal_Forest.po  ArmorProcessingEventTag.po  BalladOfHeroRito.po  BalladOfHeroZora.po  BloodyMoonRelief.po  Bottle_Mes.po  Common.po  CursedStatue.po  DgnObj_DLC_Weapon_Sword_502.po  Drag_Hero.po  Electric_Relic.po  Find_Impa.po  Fire_Relic.po  FironeMini_GiantHorse.po  FironeMini_HorseEnemy.po  FirstOhenro.po  FldObj_RockZoraRelief_A_M_01_ma.po  FourJewel.po  Gerudo_CarryIce.po  Gerudo_CarryIce_mini.po  Gerudo_Ch_Helmet.po  Gerudo_Ch_SandWarm.po  Gerudo_Ch_SnowBoots.po  Gerudo_HorseBuyer.po  Gerudo_tsukamidake.po  GodTree.po  GoronCamp.po  GotoZoraVillage.po  (+326 more)
src/: game.rs  helper.rs  lib.rs  model.rs  msbtw.rs
(+17992 files in other folders)
