[package]
name = "potty-msbt"
version = "0.1.0"
authors = ["Shane O Donovan <kenshii.sod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
potty = { git = "https://github.com/shane-tw/potty" }
msbt = { git = "https://github.com/shane-tw/msbt-rs", branch = "atr1-unknown" }
regex = "1"
byteordered = "0.4.0"
serde = { version = "1.0.117", features = ["derive"] }
bincode = "1.3.1"
base64 = "0.13.0"
hex = "0.3.1"
